// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kaReducer InsertRow insert after row with id=2 1`] = `
Array [
  Object {
    "id": 1,
    "val": 102,
  },
  Object {
    "id": 2,
    "val": 10,
  },
  Object {
    "id": 4,
    "val": 40,
  },
  Object {
    "id": 3,
    "val": 10,
  },
]
`;

exports[`kaReducer InsertRow insert before row with id=2 1`] = `
Array [
  Object {
    "id": 1,
    "val": 102,
  },
  Object {
    "id": 3,
    "val": 30,
  },
  Object {
    "id": 2,
    "val": 10,
  },
]
`;

exports[`kaReducer InsertRow insert to 0 position by default 1`] = `
Array [
  Object {
    "id": 3,
    "val": 30,
  },
  Object {
    "id": 1,
    "val": 102,
  },
  Object {
    "id": 2,
    "val": 10,
  },
]
`;

exports[`kaReducer InsertRow insert to last position for after mode 1`] = `
Array [
  Object {
    "id": 1,
    "val": 102,
  },
  Object {
    "id": 2,
    "val": 10,
  },
  Object {
    "id": 3,
    "val": 10,
  },
  Object {
    "id": 4,
    "val": 40,
  },
]
`;

exports[`kaReducer ReorderColumns default 1`] = `
Object {
  "columns": Array [
    Object {
      "key": "2",
    },
    Object {
      "key": "3",
    },
    Object {
      "key": "1",
    },
    Object {
      "key": "4",
    },
  ],
  "rowKeyField": "id",
}
`;

exports[`kaReducer ReorderRows default 1`] = `
Object {
  "data": Array [
    Object {
      "id": 2,
    },
    Object {
      "id": 3,
    },
    Object {
      "id": 1,
    },
    Object {
      "id": 4,
    },
  ],
  "rowKeyField": "id",
}
`;

exports[`kaReducer ReorderRows inner keys 1`] = `
Object {
  "data": Array [
    Object {
      "a": Object {
        "id": 2,
      },
    },
    Object {
      "a": Object {
        "id": 3,
      },
    },
    Object {
      "a": Object {
        "id": 1,
      },
    },
    Object {
      "a": Object {
        "id": 4,
      },
    },
  ],
  "rowKeyField": "a.id",
}
`;

exports[`kaReducer ResizeColumn has a col in settings 1`] = `
Array [
  Object {
    "key": "id",
  },
  Object {
    "colGroup": Object {
      "style": Object {
        "width": 200,
      },
    },
    "key": "name",
    "width": 200,
  },
]
`;

exports[`kaReducer ResizeColumn has a col.width in settings 1`] = `
Array [
  Object {
    "key": "id",
  },
  Object {
    "colGroup": Object {
      "width": 200,
    },
    "key": "name",
    "width": 200,
  },
]
`;

exports[`kaReducer ResizeColumn has a width in settings 1`] = `
Array [
  Object {
    "key": "id",
  },
  Object {
    "key": "name",
    "width": 200,
  },
]
`;

exports[`kaReducer ResizeColumn has styles only 1`] = `
Array [
  Object {
    "key": "id",
  },
  Object {
    "key": "name",
    "style": Object {
      "width": 200,
    },
  },
]
`;

exports[`kaReducer SelectRowsRange default 1`] = `
Array [
  2,
  3,
  4,
]
`;

exports[`kaReducer SelectRowsRange revert set 1`] = `
Array [
  2,
  3,
  4,
]
`;

exports[`kaReducer SelectRowsRange rowKeyValueTo is not specified 1`] = `
Array [
  2,
]
`;

exports[`kaReducer SelectRowsRange skip if rowKeyValue is not found 1`] = `
Array [
  undefined,
  1,
  2,
]
`;

exports[`kaReducer SelectRowsRange skip if rowKeyValueTo is not found 1`] = `
Array [
  undefined,
  1,
  2,
]
`;

exports[`kaReducer SetSingleAction 1`] = `
Object {
  "type": "LoadData",
}
`;

exports[`kaReducer Validate should use editor value 1`] = `
Array [
  Object {
    "columnKey": "val",
    "rowKeyValue": 1,
    "validationMessage": "value should be less than 100",
  },
  Object {
    "columnKey": "val",
    "editorValue": 103,
    "rowKeyValue": 2,
    "validationMessage": "value should be less than 100",
  },
]
`;

exports[`kaReducer Validate validates values 1`] = `
Array [
  Object {
    "columnKey": "val",
    "rowKeyValue": 1,
    "validationMessage": "value should be less than 100",
  },
  Object {
    "columnKey": "val",
    "rowKeyValue": 2,
    "validationMessage": undefined,
  },
]
`;
